Fix accessibility color contrast

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -14,6 +14,12 @@
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
+  --ifm-link-color: #016BF8;
+  --ifm-menu-color-background-active: rgb(227, 252, 247);
+  --ifm-breadcrumb-item-background-active: rgb(227, 252, 247);
+  --ifm-menu-color-active: rgb(0, 30, 43);
+  --ifm-breadcrumb-color-active: rgb(0, 30, 43);
+  --ifm-table-stripe-background: rgb(249, 251, 250);
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
@@ -26,6 +32,7 @@
   --ifm-color-primary-light: #29d5b0;
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
+  --ifm-link-color: #0099FF;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
